Update docker-compose.yml: add environment variables for Playwright configuration and timezone settings, enhancing production setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,23 @@
-version: "3.9"
-
 services:
   app:
     build:
       context: .
       dockerfile: Dockerfile
+
     ports:
       - "3000:3000"
+
     environment:
       NODE_ENV: production
       PORT: 3000
       PLAYWRIGHT_BROWSERS_PATH: /ms-playwright
+      PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: "1"
+      NEXT_TELEMETRY_DISABLED: "1"
+      TZ: "Asia/Shanghai"
+
     volumes:
       - downloads-data:/app/public/downloads
+
     restart: unless-stopped
 
 volumes:
